--- a/KeyChainPro/sim.vcxproj
+++ b/KeyChainPro/sim.vcxproj
@@ -195,6 +195,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MyKeysDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sim.h" />
     <ClInclude Include="simDlg.h" />
@@ -202,6 +203,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MyKeysDlg.cpp">
+      <DebugInformationFormat Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">ProgramDatabase</DebugInformationFormat>
+    </ClCompile>
     <ClCompile Include="sim.cpp" />
     <ClCompile Include="simDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
