--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -93,7 +93,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "My keys"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,486,280
+    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,486,280
+    EDITTEXT        IDC_EDIT,7,50,148,14,ES_AUTOHSCROLL | NOT WS_VISIBLE,WS_EX_CLIENTEDGE
 END
 
 
