Updated controls on the DB viewer to resize according to the window size.

--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -199,7 +199,7 @@ IDR_MAINFRAME MENU
 BEGIN
     POPUP "1"
     BEGIN
-        MENUITEM "My keys...",                  IDC_MYKEYS
+        MENUITEM "Keys...",                     IDC_MYKEYS
         MENUITEM SEPARATOR
         MENUITEM "Exit",                        IDC_EXIT
     END
