--- a/dbeng/dbengview/dbengview.rc
+++ b/dbeng/dbengview/dbengview.rc
@@ -77,18 +77,18 @@ IDR_MAINFRAME           ICON                    "res\\dbengview.ico"
 // Dialog
 //
 
-IDD_DBENGVIEW_DIALOG DIALOGEX 0, 0, 511, 305
+IDD_DBENGVIEW_DIALOG DIALOGEX 0, 0, 394, 305
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "dbengview"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "&Open",IDC_OPEN,7,7,50,14
-    COMBOBOX        IDC_COMBO_TABLES,199,7,305,145,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_DATA_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,497,252
+    COMBOBOX        IDC_COMBO_TABLES,194,7,193,145,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_DATA_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,29,380,252
     PUSHBUTTON      "&Close",IDC_CLOSE,67,7,50,14
-    DEFPUSHBUTTON   "OK",IDOK,399,284,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,454,284,50,14
+    DEFPUSHBUTTON   "OK",IDOK,282,284,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,337,284,50,14
 END
 
 
@@ -142,7 +142,7 @@ BEGIN
     IDD_DBENGVIEW_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 504
+        RIGHTMARGIN, 387
         TOPMARGIN, 7
         BOTTOMMARGIN, 298
     END
@@ -159,8 +159,8 @@ IDD_DBENGVIEW_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0,
     0, 0, 0, 0,
-    0, 0, 0, 0,
-    0, 0, 97, 97,
+    0, 0, 100, 0,
+    0, 0, 100, 100,
     0, 0, 0, 0,
     100, 100, 0, 0,
     100, 100, 0, 0
