Updated icon and Keys dialog.

--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -88,12 +88,13 @@ BEGIN
     LTEXT           "K&ey name:",IDC_STATIC,7,54,306,8
 END
 
-IDD_MYKEYS DIALOGEX 0, 0, 500, 294
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "My keys"
+IDD_MYKEYS DIALOGEX 0, 0, 459, 294
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+EXSTYLE WS_EX_WINDOWEDGE
+CAPTION "Keys"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,486,280
+    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,445,280,WS_EX_STATICEDGE
     EDITTEXT        IDC_EDIT,7,50,148,14,ES_AUTOHSCROLL | NOT WS_VISIBLE,WS_EX_CLIENTEDGE
 END
 
@@ -156,7 +157,7 @@ BEGIN
     IDD_MYKEYS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 493
+        RIGHTMARGIN, 452
         TOPMARGIN, 7
         BOTTOMMARGIN, 287
     END
@@ -176,7 +177,9 @@ END
 
 IDD_MYKEYS AFX_DIALOG_LAYOUT
 BEGIN
-    0
+    0,
+    0, 0, 100, 100,
+    0, 0, 0, 0
 END
 
 
