--- a/KeyChainPro/sim.vcxproj.filters
+++ b/KeyChainPro/sim.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyKeysDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sim.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyKeysDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
