* Increased layout of the DB viewer dialog. * Added new table to the schema for copy/paste actions.

--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -91,7 +91,7 @@ END
 IDD_MYKEYS DIALOGEX 0, 0, 521, 295
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_WINDOWEDGE
-CAPTION "Keys"
+CAPTION "KeyChain Pro - Keys"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,507,281,WS_EX_STATICEDGE
