--- a/KeyChainPro/sim.vcxproj.filters
+++ b/KeyChainPro/sim.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="MyKeysDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyCopyPaste.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sim.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MyKeysDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyCopyPaste.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
