* Updated copy/paste functionality to enable adding and editing records. * UI updates for DB viewer to display wait cursor for lengthy operations.

--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -103,7 +103,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Copy paster"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_CP_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,444,84
+    CONTROL         "",IDC_CP_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,444,84
     EDITTEXT        IDC_CP_CONTENT,7,103,444,187,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDITINPLACE,88,34,40,14,ES_AUTOHSCROLL | NOT WS_VISIBLE
 END
