* Added generic input dialog ( to ask for master password on startup ) * Redesigned encryption to use master password rather than relying on user's primary credentials so as to cover certain cases ( like being removed from AD ).

--- a/KeyChainPro/sim.vcxproj
+++ b/KeyChainPro/sim.vcxproj
@@ -195,6 +195,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InputDlg.h" />
     <ClInclude Include="MyCopyPaste.h" />
     <ClInclude Include="MyKeysDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -204,6 +205,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="InputDlg.cpp" />
     <ClCompile Include="MyCopyPaste.cpp" />
     <ClCompile Include="MyKeysDlg.cpp">
       <DebugInformationFormat Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">ProgramDatabase</DebugInformationFormat>
