--- a/KeyChainPro/sim.vcxproj.filters
+++ b/KeyChainPro/sim.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="MyCopyPaste.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InputDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sim.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MyCopyPaste.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InputDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
