--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -110,6 +110,7 @@ END
 
 IDD_INPUTDLG DIALOGEX 0, 0, 501, 28
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_APPWINDOW
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
