Added preliminary version of keys backup and restore, not fully functional.

--- a/KeyChainPro/sim.rc
+++ b/KeyChainPro/sim.rc
@@ -94,8 +94,10 @@ EXSTYLE WS_EX_WINDOWEDGE
 CAPTION "KeyChain Pro - Keys"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,507,281,WS_EX_STATICEDGE
+    CONTROL         "",IDC_LST_KEYS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,27,507,261,WS_EX_STATICEDGE
     EDITTEXT        IDC_EDIT,7,50,148,14,ES_AUTOHSCROLL | NOT WS_VISIBLE,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Backup",IDC_BTNBACKUP,7,7,50,14
+    PUSHBUTTON      "Restore",IDC_BTNRESTORE,73,7,50,14
 END
 
 IDD_MYCOPYPASTE DIALOGEX 0, 0, 458, 297
@@ -214,6 +216,8 @@ IDD_MYKEYS AFX_DIALOG_LAYOUT
 BEGIN
     0,
     0, 0, 100, 100,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
     0, 0, 0, 0
 END
 
