--- a/mailer/App.config
+++ b/mailer/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="server" value="smtp.gmail.com"/>
+    <add key="port" value="587"/>
+  </appSettings>
 </configuration>
